# debug-info-concrete-check

./: README.md  check.py  check_traces.py  collect_trace.py  flake.nix  lldb.py  lldb_collector.py  log.py  run.py  tracer.py
binary-instrumentation/: CMakeLists.txt  collect-trace.cpp  configure-debug.sh  configure-release-debug.sh  configure-release.sh  elf.cpp  elf.h  macho.cpp  macho.h  notes.md  trace-debug.h
binary-instrumentation/cmake/: FindLLVM.cmake  find_llvm.cmake
compare-traces/: Cargo.toml  notes.md
compare-traces/src/: diff.rs  event.rs  inlining.rs  main.rs  print.rs  remarks.rs  report.rs  trace.rs  tree.rs  tree_diff.rs
debugger/: collect_trace.py  lldb_collector.py
filter-trace/: CMakeLists.txt  configure-debug.sh  configure-release.sh  filter-trace-memory-effects.cpp  filter-trace.cpp
