[package]
name = "debug-info-concrete-compare-traces"
version = "0.1.0"
edition = "2021"
authors = ["J. Ryan Stinnett <jryans@gmail.com>"]
description = "Compares dynamic instrumentation traces and reports divergences"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
console = "0.15.10"
env_logger = "0.11.6"
log = "0.4.25"
serde = "1.0.218"
serde_yaml = "0.9.34"
similar = "2.7.0"

[profile.dev]
split-debuginfo = "packed"
